# MT7668-WiFi

./: .gitignore  CMakeLists.txt  Makefile.x86  README.md  build.sh  i-have-this-usb-polished-pony.md  mt7668-samsung-tv-dongle-notes.md  plan.md
drv_wlan/MT6632/wlan/: Makefile
drv_wlan/MT6632/wlan/common/: wlan_oid.c
drv_wlan/MT6632/wlan/include/mgmt/: p2p_dev.h
drv_wlan/MT6632/wlan/include/nic/: mac.h
drv_wlan/MT6632/wlan/mgmt/: p2p_func.c
drv_wlan/MT6632/wlan/os/linux/: gl_cfg80211.c  gl_init.c  gl_kal.c  gl_p2p.c  gl_proc.c  platform.c
drv_wlan/MT6632/wlan/os/linux/hif/usb/: usb.c
drv_wlan/MT6632/wlan/os/linux/include/: gl_kal.h  gl_os.h
